--- a/application.yaml
+++ b/application.yaml
@@ -1,8 +1,1 @@
-my:
-  greeting: Hello
-  list: One, Two, Three
- 
-db:
-  connection: connection-string-here
-  host: 192.169.0.0
-  port: 8081
+url: https://abc.com
